--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "xygaog/xygaog.github.io"
 author:
   # Biographic information
   avatar           : photo.jpg
-  name             : "Xinyi Gao (高昕毅)"
+  name             : "Xinyi Gao | (高昕毅)"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student"
   location         : "Brisbane"
@@ -34,7 +34,6 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=zCgaJWEAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/0009-0004-1146-8925"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Xinyi-Gao-14"
@@ -46,9 +45,10 @@ author:
   github           : "XYGaoG"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  orcid            : "http://orcid.org/0009-0004-1146-8925"
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Username # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
