--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "xygaog/xygaog.github.io"
 author:
   # Biographic information
   avatar           : photo.jpg
-  name             : "Xinyi Gao | (高昕毅)"
+  name             : "Xinyi Gao | 高昕毅"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student"
   location         : "Brisbane"
@@ -37,6 +37,7 @@ author:
   semantic         : # URL
   pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Xinyi-Gao-14"
+  orcid            : "http://orcid.org/0009-0004-1146-8925"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
@@ -45,7 +46,6 @@ author:
   github           : "XYGaoG"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
-  orcid            : "http://orcid.org/0009-0004-1146-8925"
 
   # Social media
   bluesky          : # Username # Replace this with you Bluesky username
