--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Xinyi GAO | 高昕毅"
   pronouns         : # example: "she/her"  
   bio              : "Graph representation learning, Graph condensation, Signal processing"
-  location         : "Brisbane"
+  location         : "Brisbane, Australia"
   employer         : "The University of Queensland"
   uri              : # URL
   email            : "xinyi.gao@uq.edu.au" 
