--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : photo.jpg
   name             : "Xinyi GAO | 高昕毅"
   pronouns         : # example: "she/her"  
-  bio              : "Graph representation learning, Graph condensation, Signal processing"
+  bio              : # "Graph representation learning, Graph condensation, Signal processing"
   location         : "Brisbane, Australia"
   employer         : "The University of Queensland"
   uri              : # URL
