--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Brisbane, Australia"
   employer         : "The University of Queensland"
   uri              : # URL
-  email            : # URL "xinyi.gao@uq.edu.au" 
+  email            : xinyi.gao AT uq.edu.au
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
