--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : photo.jpg
   name             : "Xinyi GAO | 高昕毅"
   pronouns         : # example: "she/her"  
-  bio              : " "# "Graph representation learning, Graph condensation, Signal processing"
+  bio              : " "
   location         : "Brisbane, Australia"
   employer         : "The University of Queensland"
   uri              : # URL
-  email            : "xinyi.gao AT uq.edu.au"
+  email            : " xinyi.gao AT uq.edu.au"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
